--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">Fancy border!</span>
+          <span class="mdl-layout-title">╔═════ ∘◦ ⛧ﾐ ◦∘ ══════╗</span>
         </div>
       </header>
       <main class="mdl-layout__content">
+        <h2>Dogs. Your welcome</h2>
         <div id="api-image"></div>
       </main>
     </div>
